src-tauri/build_error_v8.txt
   Compiling tauri-app v0.1.0 (C:\_new_ai_project\uriLocalShare\src-tauri)
warning: unused import: `Deserialize`
 --> src\lib.rs:2:13
  |
2 | use serde::{Deserialize, Serialize};
  |             ^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `mdns`
 --> src\p2p.rs:3:16
  |
3 |     gossipsub, mdns, noise, request_response, swarm::NetworkBehaviour, swarm::SwarmEvent, tcp, yamux,
  |                ^^^^

error[E0282]: type annotations needed
  --> src\p2p.rs:51:36
   |
51 |         let (cmd_tx, mut cmd_rx) = mpsc::channel(32);
   |                                    ^^^^^^^^^^^^^ cannot infer type of the type parameter `T` declared on the function `channel`
   |
help: consider specifying the generic argument
   |
51 |         let (cmd_tx, mut cmd_rx) = mpsc::channel::<T>(32);
   |                                                 +++++

For more information about this error, try `rustc --explain E0282`.
warning: `tauri-app` (lib) generated 2 warnings
error: could not compile `tauri-app` (lib) due to 1 previous error; 2 warnings emitted
